2015-05-10  Mikael Magnusson  <mikachu@gmail.com>

	* 35065: Src/zsh.h: Don't treat NUL as a combining character

2015-05-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35066: Completion/Unix/Command/_python
	Completion/Unix/Command/_subversion: Minor completion fix for
	pasted arguments

2015-05-09  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35064: Src/pattern.c, Src/utils.c, Src/ztype.h: rename
	ISPRINT to ZISPRINT to avoid name conflict

2015-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 35059: Doc/Zsh/builtins.yo, Src/params.c,
	Test/B02typeset.ztst: fix, document and test "readonly -p"
	output for arrays and specials.

	* 35056: Test/A02alias.ztst: turn off PROMPT_SP for interactive
	test.

2015-05-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35057: Etc/FAQ.yo: make URL clickable (should have been
	included in 34850)

2015-05-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 35054: Src/params.c, Test/B02typeset.ztst: "readonly -p"
	displays unset readonly variables with POSIXBUILTINS.

	* Eric Cook: 35052: Completion/BSD/Command/_bsdconfig,
	Completion/BSD/Command/_bsdinstall,
	Completion/BSD/Command/_jexec, Completion/BSD/Command/_jls:
	new completions.

2015-05-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 35046: Src/lex.c: properly unwind cmdstack when erroring out of
	lexing a parameter expansion in braces

2015-05-06  Peter Stephenson  <p.stephenson@samsung.com>

	* c.f. 35041 (Axel Beckert): Doc/Zsh/zle.yo: typo.

2015-05-06  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35034: improve format in the manual (up to Chapter18)

2015-05-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk, Etc/FAQ.yo: update for
	5.0.7-dev-2, including updated FAQ source for newer YODL.

	* 35032: Src/jobs.c: update job status with process status if
	process detected as continued.

2015-05-05  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: fix descriptions in previous commit (cosmetic).
